recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters length, angle, shrink.
	tree(steps-1)
            ^Tree:8: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters length, angle, shrink.
	tree(steps-1)
            ^